# csound-plugins

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  Contributing.html  Installation.html  README.md  VERSION  azure-pipelines.yml  csound7-linux-installer.sh  index.html  mkdocs.yml  search.html  sitemap.xml
assets/: README.txt  (+4 more)
src/else/: CMakeLists.txt  csoundplugins-CMakeLists.txt  else.json  manifest.json  risset.json
src/else/doc/: atstop.md  bisect.md  crackle.md_  cuetrig.md_  detectsilence.md  diode_ringmod.md  diode_ringmod.md_  fileexists.md  fileexists.md_  frac2int.md  frac2int.md_  ftfill.md  ftfill.md_  ftfind.md_  gaintovel.md  gaintovel.md_  lfnoise.md_  linenv.md_  linexp.md  linexp.md_  loadnpy.md_  mtro.md  mtro.md_  perlin3.md  perlin3.md_  perlin3hash.md  perlin3hash.md_  picksource.md_  presetinterp.md  presetinterp.md_  pvscrest.md  pvscrest.md_  pvsentropy.md_  pvsflatness.md_  pvsmagsum.md  pvsmagsum.md_  pvsmagsumn.md  pvsmagsumn.md_  pvsrolloff.md  pvsrolloff.md_  (+28 more)
src/else/docs/: accum.md  accum.md_  atstop.md  atstop.md_  bisec.md_  bisect.md  bisect.md_  crackle.md  crackle.md_  defer.md  deref.md  deref.md_  detectsilence.md  detectsilence.md_  diode_ringmod.md  diode_ringmod.md_  errormsg.md  extendarray.md  file_exists.md  file_exists.md_  fileexists.md_  findarray.md_  frac2int.md  frac2int.md_  ftfind.md  ftsetparams.md  interp1d.md  interp1d.md_  lfnoise.md  lfnoise.md_  linenv.md  linenv.md_  loadmtx.md  loadnpy.md_  memview.md  memview.md_  panstereo.md_  pargread.md  pargread.md_  pargwrite.md  (+25 more)
src/else/examples/: accum.csd  atstop-test.csd  atstop.csd  bisect.csd  bourre-fragment-1.flac  crackle.csd  cuetrig.csd  deref.csd  detectsilence-bench.csd  detectsilence.csd  diode_ringmod-fltk.csd  diode_ringmod.csd  diode_ringmod_bench.csd  fileexists.csd  findarray.csd  finnegan01.flac  frac2int.csd  ftfill.csd  ftfind.csd  ftnew.csd  ftsetparams.csd  gaintovel.csd  initerror.csd  interp1d.csd  lfnoise.csd  linenv-test.csd  linenv.csd  linexp.csd  loadmtx.csd  loadnpy.csd  memview.csd  mtro.csd  musicbox.flac  nametoinstrnum.csd  panstereo.csd  pargread.csd  pargwrite.csd  peaklim.csd  perlin3-term.csd  perlin3-test.csd  (+56 more)
src/else/src/: else.c
src/jsfx/: CMakeLists.txt  csound-plugins.cmake  csoundplugins-CMakeLists.txt  jsfx.json  manifest.json  risset.json
src/jsfx/csound/: README.md  jsusfx_csound.cpp  jsusfx_pd_orig.cpp
src/jsfx/doc/: jsfx.md_  jsfx_getslider.md_  jsfx_play.md  jsfx_setslider.md  jsfx_setslider.md_  tubeharmonics.md_
src/jsfx/docs/: jsfx.md  jsfx.md_  jsfx_getslider.md_  jsfx_new.md  jsfx_new.md_  jsfx_play.md  jsfx_play.md_  jsfx_setslider.md_  tubeharmonics.md
src/jsfx/examples/: gain.csd  jsfx.csd  jsfx_dump.csd  jsfx_getslider.csd  jsfx_new.csd  jsfx_play.csd  jsfx_setslider.csd  np1136peaklimiter.csd  np1136peaklimiter.jsfx  ringmodulator.jsfx  tubeharmonics-comparison.csd  tubeharmonics.csd  tubeharmonics.jsfx
src/jsfx/examples/snd/: bourre-fragment-1.flac
src/jsfx/jsfx-scripts/liteon/: np1136peaklimiter.jsfx
src/jsfx/jsfx-src/: Makefile  jsusfx.cbp
src/jsfx/scripts/: fltktest.csd  jsfx-parse-ui.py  out.csd
src/pathtools/: CMakeLists.txt  csoundplugins-CMakeLists.txt  manifest.json  pathtools.json  risset.json
src/pathtools/doc/: findFileInPath.md  findFileInPath.md_  pathAbsolute.md_  pathSplit.md_  pathSplitExt.md  pathSplitExt.md_  sysPlatform.md
src/pathtools/docs/: fileFind.md_  findFileInPath.md  findFileInPath.md_  pathAbsolute.md  pathAbsolute.md_  pathJoin.md  pathJoin.md_  pathSplitk.md  scriptDir.md  sfreadmeta.md  sfreadmeta.md_  strjoin.md  strjoin.md_  strsplit.md_
src/pathtools/examples/: fileFind.csd  findFileInPath.csd  getPlatform.csd  pathAbsolute.csd  pathIsAbsolute.csd  pathJoin.csd  pathSplit.csd  pathSplitExt.csd  scriptDir.csd  sfreadmeta.csd  strjoin.csd  strsplit.csd  sysPlatform.csd
src/pathtools/src/: cs_strlib.h  pathtools.c
src/pitchtrack/: CMakeLists.txt  risset.json
src/pitchtrack/doc/: pyin.md  pyin.md_
src/pitchtrack/examples/: pyin-test.csd  pyin.csd  pyin2.csd
src/pitchtrack/src/: pyin.c  pyinlib.c  pyinlib.h
src/pitchtrack/test/: pyin_demo.c
src/semsys/: .gitignore  CMakeLists.txt  README.md  corpus.espc  csoundplugins-CMakeLists.txt  risset.json
src/semsys/doc/: semdim.md  semembed.md  semembedaudio.md  semembedaudiofile.md  semembedaudioft.md  semembedfile.md  semembedtxt.md  semembedtxtfile.md  semload.md  semspace.md  semspaceadd.md  semspaceaddaudio.md  semspaceaddtxt.md  semspacebuild.md  semspaceclear.md  semspacequery.md  semspacequeryaudio.md  semspacequeryaudioft.md  semspacequerytxt.md  semspacesave.md  semsttload.md  semsttready.md  semsttresult.md  semsttsubmitarray.md  semsttsubmitfile.md  semsttsubmitft.md  semsttsubmitlive.md
src/semsys/examples/: corpus.espc  corpus.txt  sem_embed_audio.csd  sem_embedding.csd  sem_space.csd  sem_space_audio.csd  sem_space_build.csd  sem_space_clear.csd  sem_stt_file.csd  sem_stt_live.csd  sem_synthesis.csd  sem_synthesis_additive.csd  sem_token_embedding.csd  semdim.csd  semembedaudio.csd  semembedaudiofile.csd  semembedaudioft.csd  semembedtxt.csd  semembedtxtfile.csd  semload.csd  semspace.csd  semspaceaddaudio.csd  semspaceaddtxt.csd  semspacebuild.csd  semspaceclear.csd  semspacequeryaudio.csd  semspacequeryaudioft.csd  semspacequerytxt.csd  semspacesave.csd  semsttload.csd  semsttready.csd  semsttresult.csd  semsttsubmitarray.csd  semsttsubmitfile.csd  semsttsubmitft.csd  semsttsubmitlive.csd  semsys_concepts.txt  sounds.espc  test.aif
src/semsys/src/: semsys.c  semsys.h
src/semsys/utest/: utest.csd
src/semsys/utest/espc/: semsys_utest_audio.espc  semsys_utest_text.espc  semsys_utest_text_saved.espc  semsys_utest_text_saved_k.espc
src/semsys/utest/utest_data/: corpus_a.txt
src/semsys/utest/utest_data/texts/: doc_a.txt  doc_b.txt  doc_c.txt
src/sndmeta/: CMakeLists.txt  csoundplugins-CMakeLists.txt  manifest.json  risset.json
src/sndmeta/doc/: filereadmeta.md_
src/sndmeta/examples/: filereadmeta.csd
src/sndmeta/src/: cs_strlib.h  sndmeta.c
(+568 files in other folders)
